--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <button id="save">Save</button>
     <div id="main-stage"></div>
     <div id="root"></div>
     <!--
